fixed nav bar issue on mobile devices

--- a/src/assets/sass/paper-kit/_responsive.scss
+++ b/src/assets/sass/paper-kit/_responsive.scss
@@ -25,7 +25,7 @@
     .navbar .navbar-collapse.collapse,
     .navbar .navbar-collapse.collapse.in,
     .navbar .navbar-collapse.collapsing{
-        // display: none !important;
+         display: block !important;
     }
     .demo-header .motto{
         padding-top: 30% !important;
